--- a/tweet-visualizer/index.html
+++ b/tweet-visualizer/index.html
@@ -3,71 +3,26 @@
 <head>
     <meta charset="utf-8">
     <title>Naruto</title>
+    <style>
+
+    .links line {
+      stroke: #999;
+      stroke-opacity: 0.6;
+    }
+
+    .nodes circle {
+      stroke: #fff;
+      stroke-width: 1.5px;
+    }
+
+    </style>
 </head>
 <body>
+    <svg width="960" height="600"></svg>
+    <!-- This is only for example.js, you need to import the d3.v4.min.js for it to work
     <canvas width="1000" height="1000"></canvas>
+    -->
 </body>
-
-<script src="https://d3js.org/d3.v4.min.js"></script>
-<!--
-<script>
-    let canvas = document.querySelector("canvas"),
-    context = canvas.getContext("2d"),
-    width = canvas.width,
-    height = canvas.height;
-
-    d3.json("../data/data.json", function (error, data) {
-        if (error) throw error;
-
-        let root = d3.stratify()
-            .id(function (d) { return d['user']['id']})
-            .parentId(function(d) { return null })
-            (data);
-
-        let nodes = root.descendants();
-
-        let simulation = d3.forceSimulation(nodes)
-            .force("charge", d3.forceManyBody())
-            //.force("link", d3.forceLink(links).strength(1))
-            .force("x", d3.forceX())
-            .force("y", d3.forceY())
-            .on("tick", ticked);
-
-
-        d3.select(canvas)
-            .call(d3.drag())
-            .container(canvas);
-
-        function dragsubject() {
-            return simulation.find(d3.event.x - width / 2, d3.event.y - height / 2);
-        }
-
-        function ticked() {
-            context.clearRect(0, 0, width, height);
-            context.save();
-            context.translate(width / 2, height / 2);
-
-            /*context.beginPath();
-            links.forEach(drawLink);
-            context.strokeStyle = "#aaa";
-            context.stroke();*/
-
-            context.beginPath();
-            nodes.forEach(drawNode);
-            context.fill();
-            context.strokeStyle = "#fff";
-            context.stroke();
-
-            context.restore();
-        }
-
-        function drawNode(d) {
-            console.log(d);
-            context.moveTo(d.x + 3, d.y);
-            context.arc(d.x, d.y, 3, 0, 2 * Math.PI)
-        }
-    });
-
-</script> -->
-<script src="example.js"></script>
+<script src="https://d3js.org/d3.v5.min.js"></script>
+<script src="tweet-forcegraph.js"></script>
 </html>
